Fix permission to open on windows
Signed-off-by: Arthur Diniz <arthurbdiniz@gmail.com>